--- a/documentario.html
+++ b/documentario.html
@@ -52,8 +52,9 @@
         <section class="documentary-section section-padding">
             <div class="container">
                 <div class="video-container">
-                    <!-- Substitua 'SEU_LINK_DO_YOUTUBE' pelo ID do seu vídeo. Ex: https://www.youtube.com/embed/dQw4w9WgXcQ -->
-                    <iframe src="https://www.youtube.com/embed/SEU_LINK_DO_YOUTUBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- O erro estava aqui. Você colou um <iframe> dentro de outro. -->
+                    <!-- O correto é ter apenas a URL no "src", como abaixo: -->
+                    <iframe src="https://www.youtube.com/embed/6j4kCNwPQpo" title="Ouça Quem Vive: Desvendando a aporofobia e as vozes Invisíveis de São José do Rio Preto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="video-description">
                     <h2>Um convite à reflexão</h2>
@@ -92,4 +93,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
