--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 <p class="cta-subtitle">Nosso minidocumentário dá voz a quem raramente é ouvido. Conheça as histórias, os desafios e a resiliência de pessoas que enfrentam a aporofobia todos os dias. Uma jornada para despertar a empatia e inspirar a mudança.</p>
                 <div class="video-preview">
                      <a href="documentario.html">
-                        <img src="https://placehold.co/800x450/2F4F4F/FFFFFF?text=Clique+para+Assistir" alt="Prévia do minidocumentário">
+                        <!-- Corrigi aqui: O 'src' da imagem estava quebrado com o código do iframe. -->
+                        <!-- Agora, ele usa a capa oficial do seu vídeo no YouTube. -->
+                        <img src="assets/thumbnail.png" alt="Prévia do minidocumentário Ouça Quem Vive">
                         <div class="play-icon"></div>
                      </a>
                 </div>
@@ -129,4 +131,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
